welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:3: error: illegal inheritance from final class Array
	var T =new Array[Color](getMondeHauteur()){
                   ^Array2:5: error: recursive variable T needs type
			T(i)=getCouleurSol()
                        ^Array2:13: error: not found: value getHauteurMonde
			for (i <- 0 to getHauteurMonde()-1){
                                       ^